[project]
name = "learner-module"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bson>=0.5.10",
    "cachetools>=6.1.0",
    "fastapi[standard]>=0.115.14",
    "pymongo>=4.13.2",
    "unicorn>=2.1.3",
    "uvicorn>=0.34.3",
]
